--- a/Journal/2022-04-15.md
+++ b/Journal/2022-04-15.md
@@ -1,3 +1,4 @@
 # Friday, April 15, 2022
 
-Installed Foam template in preparation for ingest of Cardano 360 transcripts and supporting linked references.
+- [x] Install Foam template in preparation for ingest of Cardano 360 transcripts and supporting linked references.
+- [x] Add detail to the readme to explain purpose and scope of project.
